--- a/KOF.Core/KOF.Core.csproj
+++ b/KOF.Core/KOF.Core.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x86</Platforms>
     <PlatformTarget>x86</PlatformTarget>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
